[metadata]
name = django-trips
version = attr: django_trips.__version__
description = A Django Rest API for fetching and creating trips and their schedules.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/awaisdar001/django-trips
author = Awais Jibran
author_email = awaisdar001@gmail.com
license = MIT
license_files =
    LICENSE
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = True
packages = find:
python_requires = >=3.11
install_requires =
    Django>=4.2
    # Add other dependencies here

[options.package_data]
* =
    *.json
    *.txt
    *.md
    static/*

[options.extras_require]
dev =
    pytest>=7.0
    pytest-django>=4.5.0
    pylint>=2.0